--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
   - SYMFONY_VERSION=2.5.*
   - SYMFONY_VERSION=2.6.*
   - SYMFONY_VERSION=2.7.*@dev
+  - SYMFONY_VERSION=3.0.*@dev
 
 cache:
   directories:
